
2008-7-22:

  - New or renamed path planner classes: QExpand, QEdgeConstraint,
    QToTPlanner, QToQPlanner, QToQSamplerPlanner.

  - Removal of deprecated or non-maintained classes:
    StraightLinePathPlanner, lazyprm.

  - CollisionDetector takes Ptr types as argument in the constructor.

2008-7-1:

  - XML::printTree() utility.

  - "Smart" default collision setup removed from TUL loader.

2008-6-24:

  - Bugfix for the TUL loader: The initial state for movable frames was
  not set.

  - New SBL path planner.

  - Abstractions for path planners: QSampler, QNormalizer,
    StateConstraint, QConstraint, StopCriteria.

  - Automatic exclusion of statically linked frames in the collision
    detector.

  - A Ptr<T> convention for passing of pointers to objects.

  - Path planners can now be aborted by a stop criteria.

  - A Models utilities file.

2008-6-8:

  - Image takes a pointer to vector<unsigned char> as argument (and
    not a reference).

2008-6-4:

  - ProximityStrategy::clearFrame() now required on the interface.

  - New methods CollisionDetector::setCollisionStrategy() and
    CollisionDetector::getCollisionStrategy().
    CollisionDetector::setCDStrategy() is now deprecated.

  - New methods Q::empty(), Transform3D(translation),
    Transform3D(rotation).

2008-4-28:

  - The TUL loader now supports multiple identifiers for collision
    models and drawables.

2008-4-28:

  - Static methods now start with a lower case letter. Many of the
    upper case methods have been removed, but the most frequently
    used have been declared deprecated.

  - Use RW_REMOVE_DEPRECATED to remove all deprecated methods.

2008-4-25: The interface of MetricUtil has been rewritten.

2008-4-23: Frame::getDof() is deprecated; use getDOF() like for
Device.

2008-4-23: Rewrite and cleanup of rw::task.

2008-4-23: Transform2D, Rotation2D and Vector2D should now be of the
same standard as the 3D classes.

2008-4-8: Added dynamic library loading in rwlibs::dll
