@@ -38,6 +38,7 @@ set(AllLibraries
   lualib
   pqp
   opcode
+  yaobi
   ${MathLibs})
 
 add_library(rw_manual_library
@@ -51,6 +52,9 @@ add_library(rw_manual_library
   ex-print-kinematic-tree.cpp
   ex-traverse-task.cpp
   )
+
+add_executable(rw_path_planner ex-path-planning.cpp)
+target_link_libraries(rw_path_planner ${AllLibraries})
 
 add_executable(rw_lua_interpreter ex-lua-interpreter.cpp)
 target_link_libraries(rw_lua_interpreter rw_manual_library ${AllLibraries})
