@@ -4,6 +4,7 @@
   ActiveJoint
   Revolute
   JointPosLimit -180 180
+  JointVelLimit 20
   CollisionSetup "DeviceCollisionSetup.xml"
 }
 
@@ -20,6 +21,7 @@
   ActiveJoint
   Revolute
   JointPosLimit -90 90
+  JointVelLimit 20
 }
 
 { "J1Geo"
@@ -35,6 +37,7 @@
   ActiveJoint
   Revolute
   JointPosLimit -180 180
+  JointVelLimit 20
 }
 
 { "J2Geo"
@@ -50,6 +53,7 @@
   ActiveJoint
   Revolute
   JointPosLimit -90 90
+  JointVelLimit 20
 }
 
 { "J3Geo"
@@ -65,6 +69,7 @@
   ActiveJoint
   Revolute
   JointPosLimit -180 180
+  JointVelLimit 20
 }
 
 { "J4Geo"
@@ -80,6 +85,7 @@
   ActiveJoint
   Revolute
   JointPosLimit -90 90
+  JointVelLimit 20
 }
 
 { "J5Geo"
@@ -95,6 +101,7 @@
   ActiveJoint
   Revolute
   JointPosLimit -180 180
+  JointVelLimit 20
 }
 
 { "J6Geo"
