@@ -1,26 +1,26 @@
 { "Pos-0"
-    Position (0, 0, 0.25)
+  Position (0, 0, 0.25)
 }
 
 { "Wall-1"
-    Position (0.5, 0.5, 0)
-    ReferenceFrame "Pos-0"
-    GeoID "#Box 0.05 1 0.5"
+  Position (0.5, 0.5, 0)
+  ReferenceFrame "Pos-0"
+  GeoID "#Box 0.05 1 0.5"
 }
 
 { "Wall-2"
-    Position (-0.5, 0.5, 0)
-    RPY (90, 0, 0)
-    ReferenceFrame "Pos-0"
-    GeoID "#Box 0.05 1 0.5"
+  Position (-0.5, 0.5, 0)
+  RPY (90, 0, 0)
+  ReferenceFrame "Pos-0"
+  GeoID "#Box 0.05 1 0.5"
 }
 
 { "Cylinder-1"
-    Position (-0.6, -0.1, 0.5)
-    GeoID "#Cylinder 0.2 1 12"
+  Position (-0.6, -0.1, 0.5)
+  GeoID "#Cylinder 0.2 1 12"
 }
 
 { "Floor"
-    Position (0, 0, -0.0125)
-    GeoID "#Box 4 3 0.025"
+  Position (0, 0, -0.0125)
+  GeoID "#Box 4 3 0.025"
 }
